# cosmic-applet-cpu-temperature

./: Cargo.toml
data/usr/share/applications/: cosmic-ext-applet-cpu-temperature.desktop
src/: config.rs  main.rs  sysinfo_utils.rs  window.rs
usr/share/applications/: cosmic-applet-cpu-temperature.desktop
