[package]
name = "cosmic-applet-cpu-temp"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
tokio = { version = "1.36.0", features = ["time", "macros", "sync"] }
chrono = { version = "0.4.35", features = ["clock"] }
sysinfo = "0.33.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland"]

